--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <h1>empezando proyeto</h1>
     <p>la cancion</p>
-    <audio controls src="FukashigiNoKarte.mp3"></audio>
+    <audio controls src="Mai-Sakurajima.mp3"></audio>
 </body>
 </html>
